<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccelerometerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ipAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipAddressLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/ipAddressText"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="192.168.0.1" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/serverPortLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serverPortLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/serverPortText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="4000"
            android:inputType="number" />

        <TextView
            android:id="@+id/periodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/periodText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="0" />

        <EditText
            android:id="@+id/endOfMessageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="End of message" />

        <Button
            android:id="@+id/startStreamingButton"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/startSendButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/x_axis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="X"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/y_axis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="Y"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/z_axis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="Z"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/customMessageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customMessageLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/customMessageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/customMessageText" />

        <Button
            android:id="@+id/sendCustomMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sendCustomMessageButtonText" />

    </LinearLayout>

</RelativeLayout>
